[package]
name = "vsock-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
hyper = { version = "1.4.1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.6", features = ["tokio", "service"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-vsock = "0.5.0"
tower = { version = "0.4.13", features = ["util"] }
